# sc-interdiction

./: .code-quality.toml  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Cargo.toml  INTEGRATION_PROGRESS.md  Makefile  README.md  RELEASE_PROCESS_FIX.md  STASH_INTEGRATION_PLAN.md  TESTING.md  TODO.md  clippy.toml  docker-compose.yml  make.cmd
.bin/: cargo  git  pre-commit
.cargo/: config.toml.template
.claude/: settings.local.json
.claude/skills/coding-style/: SKILL.md  project-notes.md  python-style.md  rust-style.md  typescript-style.md
.githooks/: check-branch-push.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/actions/generate-changelog/: action.yml
.github/workflows/: branch-protection.yml  ci.yml  create-release.yml  pr-validation.yml  publish-release.yml  release-branch-ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-wikelo-data-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-item-source-research/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-DATA-READY.md  02-RESEARCH.md
.planning/phases/02.1-game-data-extraction/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-03-PLAN.md  02.1-03-SUMMARY.md  02.1-RESEARCH.md  DATAFORGE-FINDINGS.md
.planning/phases/03-wikelo-data-module/: 03-CONTEXT.md  03-RESEARCH.md
crates/api-client/: Cargo.toml
crates/api-client/src/: error.rs  fleetyards.rs  fleetyards_tests.rs  lib.rs  sc_api.rs  uex.rs  uex_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/tui/: app.rs  event.rs  mod.rs  text.rs  types.rs  ui.rs  widgets.rs
crates/cli/src/tui/data/: hotspots.rs  map_locations.rs  mod.rs
crates/cli/src/tui/handlers/: keys.rs  mod.rs  navigation.rs  sorting.rs
crates/cli/src/tui/snapshots/: sc_interdiction__tui__ui__tests__render_help_view.snap  sc_interdiction__tui__ui__tests__render_loading_state.snap  sc_interdiction__tui__ui__tests__render_routes_view.snap  sc_interdiction__tui__ui__tests__render_targets_view.snap  sc_interdiction__tui__ui__tests__render_with_error.snap  sc_interdiction__tui__ui__tests__render_with_selection.snap
crates/cli/src/tui/views/: help.rs  map.rs  mod.rs  routes.rs  targets.rs
crates/data-viewer/: Cargo.toml
crates/data-viewer/src/: app.rs  db.rs  event.rs  main.rs  types.rs  ui.rs
crates/data-viewer/src/views/: detail.rs  mod.rs  records.rs  tables.rs
crates/dataforge-explorer/: Cargo.toml
crates/dataforge-explorer/src/: main.rs
crates/intel/: Cargo.toml
crates/intel/src/: lib.rs  ships.rs  ships_tests.rs  targets.rs  targets_tests.rs
crates/intel/src/ships/: enrichment.rs  mod.rs  registry.rs  types.rs
crates/intel/src/wikelo/: contracts.rs  mod.rs  types.rs
crates/intel/tests/: target_analyzer_integration.rs
crates/route-graph/: Cargo.toml
crates/route-graph/src/: chokepoint.rs  fuel.rs  graph.rs  lib.rs  locations.rs  mining.rs  refinery.rs  spatial.rs
crates/sc-data-extractor/: .env.example  Cargo.toml  README.md  build.rs  diesel.toml
crates/sc-data-extractor/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/sc-data-extractor/migrations/2024010100000001_create_medallion_schemas/: down.sql  up.sql
crates/sc-data-extractor/src/: database.rs  error.rs  generated.rs  lib.rs  localization.rs  models.rs  parsers.rs
crates/sc-data-extractor/src/database/: builder.rs  connection.rs  models.rs  queries.rs  schema.rs
crates/sc-data-extractor/src/dataforge/: mod.rs  types.rs
crates/sc-data-extractor/src/models/: shops.rs  starmap.rs
crates/sc-data-extractor/src/parsers/: shops.rs  starmap.rs
crates/sc-logistics-importer/: Cargo.toml  README.md
crates/sc-logistics-importer/resources/: generated_schema.rs  generated_schema.sql  schema_info.rs
crates/sc-logistics-importer/src/: main.rs
crates/scunpacked-explorer/: Cargo.toml
crates/scunpacked-explorer/src/: main.rs
crates/server/: Cargo.toml
crates/server/data/cache/: ships.json
crates/server/src/: lib.rs  routes.rs  state.rs
crates/server/tests/: routes_test.rs  state_test.rs
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/gold/: gold_location_distances.sql  gold_locations.sql  gold_quantum_routes.sql  gold_shop_items.sql  gold_shops.sql  schema.yml
dbt/models/silver/: schema.yml  silver_locations.sql  silver_quantum_routes.sql  silver_shop_items.sql  silver_shops.sql
dbt/models/staging/: schema.yml  stg_locations.sql  stg_quantum_routes.sql  stg_shop_items.sql  stg_shops.sql
dbt/seeds/: display_names.csv  lagrange_planets.csv  location_coordinates.csv  schema.yml
docs/: CONTRIBUTING.md  DATA_SOURCES.md  QUICKSTART_DATA_IMPORT.md  RELEASE_PROCESS.md  RELEASE_WORKFLOW.md  SCLOGISTICS_INTEGRATION.md
scripts/: README.md  check-code-quality.sh  clippy-args.txt  extract_gamedata.py  fix-release-process.sh  post-push.sh  pre-commit.sh  setup-build-env.sh  setup-dev.sh  watch-runner.sh
