[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/sc-interdiction"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
eyre = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
petgraph = "0.6"
ordered-float = "4.0"

# Caching
dashmap = "6.0"

# Internal crates
api-client = { path = "crates/api-client" }
route-graph = { path = "crates/route-graph" }
intel = { path = "crates/intel" }

[workspace.lints.rust]
unsafe_code = "warn"
unused = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
doc_markdown = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
match_same_arms = "warn"
manual_let_else = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
