[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/sc-interdiction"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
eyre = "0.6"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
petgraph = "0.6"
ordered-float = "4.0"

# Caching
dashmap = "6.0"

# ORM
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
api-client = { path = "crates/api-client" }
route-graph = { path = "crates/route-graph" }
intel = { path = "crates/intel" }
sc-data-extractor = { path = "crates/sc-data-extractor" }

[workspace.lints.rust]
unsafe_code = "deny"
unused = "deny"

[workspace.lints.clippy]
# Error handling - stricter in production, relaxed in tests
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
fallible_impl_from = "warn"

# Code quality
doc_markdown = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
match_same_arms = "warn"
manual_let_else = "warn"
cognitive_complexity = "warn"
too_many_lines = "warn"
type_complexity = "warn"

# Prevent debug artifacts in production
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Best practices
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
unnecessary_wraps = "warn"
used_underscore_binding = "warn"

# Style consistency
enum_glob_use = "warn"
wildcard_imports = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
