[package]
name = "api-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dashmap.workspace = true
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"

[lints]
workspace = true
