[package]
name = "intel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ordered-float.workspace = true
tokio.workspace = true

api-client.workspace = true
route-graph.workspace = true
anyhow = "1.0.100"

[dev-dependencies]
mockito = "1.2"

[lints]
workspace = true
