[package]
name = "route-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
petgraph.workspace = true
ordered-float.workspace = true
tracing.workspace = true

api-client.workspace = true

[lints]
workspace = true
