[package]
name = "sc-data-extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
walkdir = "2.5"
glob = "0.3"

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
