[package]
name = "sc-data-extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# Error handling
thiserror.workspace = true
eyre.workspace = true

# Database
diesel.workspace = true
dotenvy.workspace = true
chrono.workspace = true

# Utilities
walkdir = "2.5"
glob = "0.3"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
# XML parsing for schema inference
quick-xml = { version = "0.36", features = ["serialize"] }
# JSON parsing for schema inference
serde_json = "1.0"
# Directory traversal
walkdir = "2.5"

[lints]
workspace = true
