[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

api-client.workspace = true
route-graph.workspace = true
intel.workspace = true

[dev-dependencies]
mockito = "1.2"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
